# permitbot-site

./: .gitignore  dashboard.html  index.html  job.html  login.html  signup.html  waitlist.html
permitbot_qa/: .gitignore  README.md  models.py  pyproject.toml
permitbot_qa/config/: jurisdictions.yaml
permitbot_qa/engine/: check01.py
permitbot_qa/infra/terraform/: README.md  main.tf  variables.tf
permitbot_qa/infra/terraform/modules/queue/: main.tf
permitbot_qa/infra/terraform/modules/storage/: main.tf
permitbot_qa/ingest/: pdf_ingest.py
permitbot_qa/jobs/: pack_refresh.py
permitbot_qa/pack_builder/: build_pack.py  scrape_sources.py
permitbot_qa/permitbot_qa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
permitbot_qa/report/: db.py  generate.py  notify.py  storage.py
permitbot_qa/samples/: sources.sample.json
permitbot_qa/tests/: test_engine.py
permitbot_qa/ui/: cli.py  observability.py  supabase_auth.py  web.py
permitbot_qa/ui/templates/: index.html  login.html  result.html
